@@ -1,3 +1,7 @@
+Build:
+- Fix `install` target when using WITH_CJSON=no. Closes #1938.
+
+
 2.0.2 - 2020-12-10
 ==================
 
